--- a/frontend/src/classes.css
+++ b/frontend/src/classes.css
@@ -1,7 +1,9 @@
 .courseCard {
-  margin-left: 20px;
-  margin-right: 20px;
   margin-top: 20px;
   margin-left: 20px;
   width: 650px;
+}
+
+.gridRoot {
+  flexGrow: 1;
 }
