resize calendars, change navigation buttons

--- a/frontend/src/classes.css
+++ b/frontend/src/classes.css
@@ -7,6 +7,16 @@
   flexGrow: 1;
 }
 
+.fullCalendar{
+  width: 50%;
+  height: 40%;
+  margin: auto;
+}
+
+.navButtons{
+  margin-left: 25%;
+}
+
 .cardHead {
   background-color: #92dbfa;
 }
